--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       <h1 class="white-title">Produtos de qualidade</h1>
     <div id="caixa-marketing">
       <img
-        src="img/fone1.png"
+        src="img/produtos.png"
         alt="Fone de ouvido branco do tipo intra auricular"
         class="product"
       />
@@ -74,7 +74,7 @@
     <div class="marketing-white">
       <h1 class="black-title">Variedade de fones</h1>
       <p class="black-description">
-        Fones resistentes a queda, a água e a aventuras
+        Com a melhor qualidade
       </p>
      <div id="caixa-marketing-white"> 
       <img
@@ -83,10 +83,40 @@
         class="product"
       />
       <img 
-      src="img/fone3.png"
-      alt="fones"
-      class="product"
+        src="img/fone3.png"
+        alt="fones"
+        class="product"
       />
+      <img
+        src="img/fone4.png"
+        alt="Fone de ouvido do tipo airpodes"
+        class="product"
+      />
+      <img
+        src="img/fone5.png"
+        alt="Fone de ouvido do tipo concha"
+        class="product"
+     />
+      <img
+        src="img/fone6.png"
+        alt="Fone de ouvido do tipo concha"
+        class="product"
+      />
+      <img
+        src="img/fone7.png"
+        alt="Fone de ouvido do tipo concha"
+        class="product"
+    />
+      <img
+        src="img/fone8.png"
+        alt="Fone de ouvido do tipo concha"
+        class="product"
+  />
+  <img
+        src="img/fone9.png"
+        alt="Fone de ouvido do tipo concha"
+        class="product"
+/>
     </div>
       <button class="know-morewhite">Saiba mais</button>
     </div>
